Fix experience entry gap bug

--- a/styles/resume.css
+++ b/styles/resume.css
@@ -62,6 +62,7 @@ body {
 }
 
 .main .main__section {
+    width: 100%;
     margin-top: 0.4in;
     display: flex;
     --icon-size: 24px;
@@ -87,6 +88,10 @@ body {
     background: rgba(0, 0, 0, 0.15);
 }
 
+.main .main__section .section__right {
+    width: 100%;
+}
+
 .main .main__section .section__right .section__title {
     font-size: var(--font-size-xl);
     line-height: var(--icon-size);
@@ -94,51 +99,8 @@ body {
     margin-bottom: 0.15in;
 }
 
-.main .main__section .section__right .section__entry:not(:last-child) {
-    margin-bottom: 0.2in;
-}
-
-.main .main__section .section__right .section__entry .entry__header {
-    position: relative;
-    margin-bottom: 0.1in;
-}
-
-.main .main__section .section__right .section__entry .entry__header .entry__title {
-    position: relative;
-    font-size: var(--font-size-lg);
-    font-weight: bold;
-    margin-bottom: 0.025in;
+.main .main__section .section__right .section__experiences {
     display: flex;
-    align-items: center;
-}
-
-.main .main__section .section__right .section__entry .entry__header .entry__title span {
-    position: absolute;
-    left: calc(-0.22in - 6px);
-    border: 2px solid rgba(0, 0, 0, 0.3);
-    width: 12px;
-    height: 12px;
-    border-radius: 8px;
-    background: white;
-}
-
-.main .main__section .section__right .section__entry .entry__header .entry__subtitle {
-    font-size: var(--font-size-sm);
-    font-style: italic;
-}
-
-.main .main__section .section__right .section__entry .entry__header .entry__tag {
-    position: absolute;
-    top: 0;
-    right: 0;
-    background: var(--accent-primary);
-    color: var(--color-inverse-primary);
-    font-size: var(--font-size-xs);
-    line-height: 100%;
-    padding: 0.03in 0.1in;
-    border-radius: 16px;
-}
-
-.main .main__section .section__right .section__entry .entry__content {
-    font-size: var(--font-size-sm);
+    flex-direction: column;
+    gap: 0.2in;
 }
